--- a/curs 2/ap12.html
+++ b/curs 2/ap12.html
@@ -6,16 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
     <script>
 
-        let x = 7;
-        let y = 8;
-        let salut = 'Buna ziua!';
-        const REDUCERE = 20;
+    for(let i=1; i<=20; i++){
+        for(let j=i; j<=10; j++);{
+            document.write(' * ')
+        }
+        document.write(" <br> ")
+    }
 
-        console.log(salut);
-        console.log( 7 * 8);
     </script>
 </body>
 </html>
