--- a/curs 2/ap10.html
+++ b/curs 2/ap10.html
@@ -8,14 +8,20 @@
 <body>
     
     <script>
+  
+    let n;
+    let i = 1;
+    n = eval(prompt("Va rugam sa introduceti un numar",2));
+    
+    document.write(`NUmarele mai mici decat ${n} sunt: `);
+    do{
+       document.write(` ${n} `);
+       n--;
+    }while(i <= n);
 
-        let x = 7;
-        let y = 8;
-        let salut = 'Buna ziua!';
-        const REDUCERE = 20;
 
-        console.log(salut);
-        console.log( 7 * 8);
+
     </script>
+
 </body>
 </html>
