--- a/curs 3/ap2.html
+++ b/curs 3/ap2.html
@@ -7,15 +7,18 @@
 </head>
 <body>
     
-    <script>
+   <script> 
 
-        let x = 7;
-        let y = 8;
-        let salut = 'Buna ziua!';
-        const REDUCERE = 20;
+let masina = {
+    model:"Logan",
+    marca:"Dacia",
+    an: 2016,
+    culoare: "alba"
+}
+console.log(masina);
+console.log(`Masina mea este: ${masina.model} din anul ${masina.an}`)
 
-        console.log(salut);
-        console.log( 7 * 8);
-    </script>
+   </script>
+
 </body>
 </html>
