--- a/curs4/ap7.html
+++ b/curs4/ap7.html
@@ -13,6 +13,10 @@
     }
 </style>
 <body>
+    <section id="demo">
+
+        
+    </section>
     
     <script>
         function drawTags(tname,class_name,content,count=1){
